# cielutils

./: .gitignore  CMakeLists.txt  OVERVIEW_CN.md  README.md  ThirdPartyNotices.txt
benchmark/: CMakeLists.txt
benchmark/src/: all.cpp  benchmark_config.h  deque_benchmarks.cpp  set_benchmarks.cpp  sort_benchmarks.cpp  unordered_set_benchmark.cpp  vector_benchmarks.cpp
include/ciel/: algorithm.hpp  any.hpp  array.hpp  avl.hpp  circular_buffer.hpp  concepts.hpp  config.hpp  deque.hpp  forward_list.hpp  functional.hpp  hashtable.hpp  iterator.hpp  limits.hpp  list.hpp  map.hpp  memory.hpp  numeric.hpp  queue.hpp  set.hpp  span.hpp  split_buffer.hpp  stack.hpp  string.h  synth_three_way.hpp  tuple.hpp  type_traits.hpp  unordered_set.hpp  utility.hpp  variant.hpp  vector.hpp
include/ciel/algorithm_impl/: binary_search.hpp  clamp.hpp  copy.hpp  copy_backward.hpp  copy_if.hpp  copy_n.hpp  count.hpp  count_if.hpp  equal.hpp  equal_range.hpp  fill.hpp  fill_n.hpp  find.hpp  find_if.hpp  find_if_not.hpp  generate.hpp  generate_n.hpp  is_heap.hpp  is_heap_until.hpp  is_sorted.hpp  is_sorted_until.hpp  iter_swap.hpp  lexicographical_compare.hpp  lower_bound.hpp  make_heap.hpp  max.hpp  max_element.hpp  merge.hpp  min.hpp  min_element.hpp  minmax.hpp  minmax_element.hpp  mismatch.hpp  move.hpp  move_backward.hpp  next_permutation.hpp  partial_sort.hpp  pop_heap.hpp  prev_permutation.hpp  push_heap.hpp  (+11 more)
include/ciel/concepts_impl/: assignable_from.hpp  boolean_testable.hpp  class_or_enum_or_union.hpp  common_reference_with.hpp  common_with.hpp  constructible_from.hpp  convertible_to.hpp  copy_constructible.hpp  copyable.hpp  default_initializable.hpp  derived_from.hpp  destructible.hpp  equality_comparable.hpp  floating_point.hpp  integral.hpp  movable.hpp  move_constructible.hpp  ranges_swap.hpp  regular.hpp  same_as.hpp  semiregular.hpp  signed_integral.hpp  swappable.hpp  totally_ordered.hpp  unsigned_integral.hpp
include/ciel/deprecated/: deque.hpp
include/ciel/functional_impl/: divides.hpp  equal_to.hpp  function.hpp  greater.hpp  greater_equal.hpp  identity.hpp  invoke.hpp  less.hpp  less_equal.hpp  minus.hpp  modulus.hpp  multiplies.hpp  negate.hpp  not_equal_to.hpp  plus.hpp  strip_signature.hpp
include/ciel/iterator_impl/: advance.hpp  bidirectional_iterator.hpp  contiguous_iterator.hpp  distance.hpp  forward_iterator.hpp  has_member_element_type.hpp  has_member_value_type.hpp  incrementable.hpp  incrementable_traits.hpp  indirectly_readable.hpp  indirectly_readable_traits.hpp  indirectly_writable.hpp  input_iterator.hpp  input_or_output_iterator.hpp  iter_alias.hpp  iter_concept.hpp  iterator_tag.hpp  iterator_traits.hpp  legacy_bidirectional_iterator.hpp  legacy_forward_iterator.hpp  legacy_input_iterator.hpp  legacy_iterator.hpp  legacy_random_access_iterator.hpp  next.hpp  output_iterator.hpp  prev.hpp  random_access_iterator.hpp  ranges_iter_move.hpp  referenceable.hpp  reverse_iterator.hpp  sentinel_for.hpp  sized_sentinel_for.hpp  weakly_incrementable.hpp  wrap_iter.hpp
include/ciel/memory_impl/: addressof.hpp  allocation_result.hpp  allocator.hpp  allocator_arg.hpp  allocator_traits.hpp  construct_at.hpp  default_delete.hpp  destroy.hpp  destroy_at.hpp  destroy_n.hpp  pointer_traits.hpp  shared_ptr.hpp  to_address.hpp  uninitialized_copy.hpp  uninitialized_copy_n.hpp  uninitialized_default_construct.hpp  uninitialized_default_construct_n.hpp  uninitialized_fill.hpp  uninitialized_fill_n.hpp  uninitialized_move.hpp  uninitialized_move_n.hpp  uninitialized_value_construct.hpp  uninitialized_value_construct_n.hpp  unique_ptr.hpp  (+1 more)
test/: CMakeLists.txt
test/src/: algorithm_tests.cpp  any_tests.cpp  circular_buffer_tests.cpp  concepts_tests.cpp  deque_tests.cpp  exception_safety_tests.cpp  function_tests.cpp  map_tests.cpp  memory_tests.cpp  pair_tests.cpp  queue_tests.cpp  set_tests.cpp  span_tests.cpp  split_buffer_tests.cpp  stack_tests.cpp  tuple_tests.cpp  type_traits_tests.cpp  unordered_set_tests.cpp  variant_tests.cpp  vector_tests.cpp
tests/: CMakeLists.txt  deque_tests.cpp  forward_list_tests.cpp  iterator_tests.cpp  list_tests.cpp  memory_tests.cpp  span_tests.cpp  stack_tests.cpp  tuple_tests.cpp  type_traits_tests.cpp  vector_tests.cpp
tests/src/: any_tests.cpp  array_tests.cpp  deque_tests.cpp  exception_safety_tests.cpp  pair_tests.cpp  queue_tests.cpp  set_tests.cpp  split_buffer_tests.cpp  unordered_set_tests.cpp  vector_tests.cpp
(+101 files in other folders)
